--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "nft-marketplace-ethereum",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
     "@openzeppelin/contracts": "^4.5.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
+    "crypto-browserify": "^3.12.0",
+    "mdb-react-ui-kit": "^3.0.0",
+    "mdb-ui-kit": "^3.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-grid-system": "^8.1.3",
+    "react-scripts": "4.0.3",
+    "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
     "truffle-hdwallet-provider": "^1.0.17",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,6 +37,7 @@
     "production": [
       ">0.2%",
       "not dead",
+      "not ie <= 11",
       "not op_mini all"
     ],
     "development": [
@@ -37,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "crypto": false
   }
 }
