--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "nft-marketplace-ethereum",
   "version": "0.1.0",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@metamask/detect-provider": "^1.2.0",
+    "@mui/material": "^5.6.2",
     "@openzeppelin/contracts": "^4.5.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -21,11 +24,14 @@
     "web-vitals": "^2.1.4",
     "web3": "^1.7.3"
   },
+  "homepage": "http://ReCodee.github.io/Arkate",
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
+    "start": "react-scripts start",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +54,8 @@
   },
   "browser": {
     "crypto": false
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
